# okabe

./: .gitignore  .pre-commit-config.yaml  README.md  llm.py  nucleus.py  pyproject.toml
apps/: text2LIFXcolor.py  text2lifximage.py
okabe/: __init__.py  nucleus.py  version.py
okabe/tools/: __init__.py
okabe/tools/lifx/: __init__.py  lifx.py  message.py  packet.py
tools/: network.py
tools/lifx/: lifx.py  message.py  packet.py
